SwanHub/swanhub/static/css/style.less
/* ... */
#tab_content {
    padding-top: 0;
}

#tree,
#share,
#normal-page {
    padding-top: 20px;
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: @footer-height;
    background-color: @footer-background;
    border-top: solid 1px @footer-border;
    font-size: @size-6;

    .container {

        .row {
            width: inherit;
            height: inherit;

            .logo {
                text-align: right;

                img {
                    margin: 14px 0;
                    height: @footer-height - 30px;
                }
            }

            .text {
                margin-top: 23px;

                ul {
                    padding: 0;

                    li {
                        display: inline-block;

                        & + li:before {
                            content: "| ";
                            margin-left: 2px;
                            margin-right: 2px;
                        }

                        a,
                        a:active,
                        a:hover,
                        a:visited {
                            color: inherit;
                            size: @size-6;
                            line-height: 1.42857143;
                        }
                    }
                }
            }

            .text-muted {
                color: @grey-6;
            }
        }
    }
}

.end_space {
    min-height: 10px;
}

ul#options-menu {
    left: auto;
    right: 0;
}

#share-project-button {
    display: none;
}

.breadcrumb {
    background-color: transparent;
    padding: 0;
    font-family: @font_family_1;
    font-weight: 300;
    font-size: @size-4;
    margin-bottom: 40px;

    > li + li:before {
        content: "\41 ";
        font-family: "swan-icons";
        color: @color-primary;
        font-size: @size-4 / 2;
        vertical-align: middle;
        padding: 0 5px 0 7px;
    }
}

.title-bar {
    margin-top: 18px;
    margin-bottom: 9px;
    min-height: 45px;

    h1 {
        margin: 0;
    }
}

#notebook_toolbar {

    .btn {
        height: 29px;
        width: 29px;
        border-radius: 50%;
        background-color: transparent;
        border-color: @button-blue;
        color: @button-blue;
        -moz-box-shadow: inset 0 0 1px @button-blue;
        -webkit-box-shadow: inset 0 0 1px @button-blue;
        box-shadow: inset 0 0 1px @button-blue;
        font-size: @size-6;

        &:hover {
            border-color: @color-secondary;
            color: @color-secondary;
            -moz-box-shadow: inset 0 0 1px @color-secondary;
            -webkit-box-shadow: inset 0 0 1px @color-secondary;
            box-shadow: inset 0 0 1px @color-secondary;
        }

        > * {
            line-height: 26px !important;
        }

        .fa-upload {
            padding: 1px 1px 0 0;
        }

        .fa-download {
            padding: 2px 1px 0 0;
        }

    }

    .btn-danger {
        color: @button-red;
        border-color: @button-red;
        -moz-box-shadow: inset 0 0 1px @button-red;
        -webkit-box-shadow: inset 0 0 1px @button-red;
        box-shadow: inset 0 0 1px @button-red;
    }

    .btn-warning {
        color: @button-yellow;
        border-color: @button-yellow;
        -moz-box-shadow: inset 0 0 1px @button-yellow;
        -webkit-box-shadow: inset 0 0 1px @button-yellow;
        box-shadow: inset 0 0 1px @button-yellow;
    }

    .pull-right {
        margin-right: 0;
    }

    .dropdown-header {
        font-size: 10px;
        border-bottom: 0;
        padding: 3px 20px;
        margin: 0;
    }
}
/* ... */

